tests/NormalTests/paczka1/small_fuzzy/14703773.err
Error in line 7: tmCvMs A953 5,7
Error in line 10: xP4h A601 79,2
